force-app/main/default/objects/DepCategory__c/DepCategory__c.object-meta.xml
<CustomObject>
    <label>部署カテゴリ</label>
    <nameField>
        <label>部署カテゴリ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>