force-app/main/default/objects/DepCategory__c/fields/Account_LU__c.field-meta.xml
<CustomField>
    <fullName>Account_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>部署カテゴリ</relationshipLabel>
    <relationshipName>DCFGKA</relationshipName>
    <type>Lookup</type>
</CustomField>