force-app/main/default/objects/DepCategory__c/fields/BuildAppTacTarget__c.field-meta.xml
<CustomField>
    <fullName>BuildAppTacTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildApp戦略ターゲット</label>
    <type>Checkbox</type>
</CustomField>