force-app/main/default/objects/DepCategory__c/fields/DepCategoryMaster_LU__c.field-meta.xml
<CustomField>
    <fullName>DepCategoryMaster_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>部署カテゴリマスタ</label>
    <referenceTo>DepCategoryMaster__c</referenceTo>
    <relationshipLabel>部署カテゴリ</relationshipLabel>
    <relationshipName>DC1UFN</relationshipName>
    <type>Lookup</type>
</CustomField>