force-app/main/default/objects/DepCategory__c/fields/DX_No__c.field-meta.xml
<CustomField>
    <fullName>DX_No__c</fullName>
    <label>No_DX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>