force-app/main/default/objects/DepCategory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lv0</fullName>
                <default>true</default>
                <label>Lv0</label>
            </value>
            <value>
                <fullName>Lv1</fullName>
            </value>
            <value>
                <fullName>Lv2</fullName>
            </value>
            <value>
                <fullName>Lv3</fullName>
            </value>
            <value>
                <fullName>Lv4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>