force-app/main/default/objects/DepCategory__c/fields/StatusChangeDateLv2__c.field-meta.xml
<CustomField>
    <fullName>StatusChangeDateLv2__c</fullName>
    <label>Lv2更新日</label>
    <type>Date</type>
</CustomField>