force-app/main/default/objects/DepCategory__c/fields/StatusChangeDateLv3__c.field-meta.xml
<CustomField>
    <fullName>StatusChangeDateLv3__c</fullName>
    <label>Lv3更新日</label>
    <type>Date</type>
</CustomField>