force-app/main/default/objects/DepCategory__c/fields/StatusChangeDateLv4__c.field-meta.xml
<CustomField>
    <fullName>StatusChangeDateLv4__c</fullName>
    <label>Lv4更新日</label>
    <type>Date</type>
</CustomField>